# RushCargo

./: .gitignore  README.md
AllCars/: createTables.sql
rushcargo-app/: Cargo.toml
rushcargo-app/migrations/: 001_areas.sql  001_users.sql  002_buildings.sql  003_clients.sql  004_lockers.sql  005_admins.sql  006_packages.sql  007_motorcyclists.sql  007_trucker.sql  008_truckers.sql  009_orders.sql  query.sql
rushcargo-app/migrations/etc/: etc_queries.sql
rushcargo-app/migrations/local/: 002_buildings.sql  003_clients.sql  004_lockers.sql  005_admins.sql  006_packages.sql  007_motorcyclists.sql  undo_clt_send.sql
rushcargo-app/migrations/remote/: 001_clients.sql  002_lockers.sql  003_admins.sql  004_packages.sql  005_motorcyclists.sql  006_truckers.sql  008_truckers.sql  008_truckers_full.sql  009_orders.sql
rushcargo-app/src/: args.rs  check_files.rs  event.rs  main.rs
rushcargo-app/src/event/: client.rs  login.rs  mod.rs  pkgadmin.rs  settings.rs  title.rs  trucker.rs
rushcargo-app/src/model/: app.rs  app_barchar.rs  app_list.rs  app_table.rs  client.rs  common.rs  common_obj.rs  db_obj.rs  graph_reqs.rs  help_text.rs  mod.rs  pkgadmin.rs  settings.rs  title.rs  trucker.rs
rushcargo-app/src/ui/: client.rs  common_fn.rs  common_render.rs  err.rs  login.rs  mod.rs  pkgadmin.rs  settings.rs  title.rs  trucker.rs
rushcargo-app/src/update/: client.rs  common.rs  list.rs  login.rs  mod.rs  table.rs  tryget_db.rs
rushcargo-app/src/update/db/: insert.rs  mod.rs  tryget.rs  update.rs
rushcargo-graphs/: .gitignore  drawGraphs.py  example.env  requirements.txt  (+1 more)
(+75 files in other folders)
